--- a/talks/2025-04-10-chalmers-entrepreneurship/index.html
+++ b/talks/2025-04-10-chalmers-entrepreneurship/index.html
@@ -14,28 +14,28 @@
         />
         
 		<link href="../../_app/immutable/assets/0.ogwFCQNU.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.BLimavPV.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/B0eWaQLx.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/D4OyXkj9.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/4vAtHTY7.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/Cua7UF5F.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/Gm9wlhlI.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.CjCVhuzk.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/DHF8tlqI.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/w8KgJWpv.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Dr2DAEgR.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/DXsr8arQ.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/BMUd-6n8.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/D0iwhpLH.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.Bf9TS7kp.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.BYadXbVD.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/D9Z9MdNV.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DsnmJJEf.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/C9rUmDpY.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/92Z9xWeO.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/CQnEZjXw.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/0.3jzOeWAF.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/CTo79YbN.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/CrNdSYcv.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/BPYAz16F.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/DmustIFb.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/Da3CjJr0.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/BfcfWp_s.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Bx1vqr9m.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/B5S0-8mY.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/0.DIPet4RR.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/CNGJs3MS.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/BW7GZpD6.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/B5Fqddqx.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Czx8qqN7.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/jlq9eZNX.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Ctur7ITO.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/8.CqGN1xzd.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/BIIH5_Cv.js"><!--[--><!---->
+		<link rel="modulepreload" href="../../_app/immutable/nodes/8.1r7FIwkA.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/XfPZ-Kxo.js"><!--[--><!---->
 <meta charset="slidev:entry">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Creating a wellbeing economy</title>
@@ -58,15 +58,15 @@
 			
 			<script>
 				{
-					__sveltekit_10actvg = {
+					__sveltekit_1qwpexg = {
 						base: new URL("../..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.BLimavPV.js"),
-						import("../../_app/immutable/entry/app.Bf9TS7kp.js")
+						import("../../_app/immutable/entry/start.CjCVhuzk.js"),
+						import("../../_app/immutable/entry/app.BYadXbVD.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
