--- a/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
+++ b/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
@@ -13,21 +13,21 @@
             href="/images/compass-icon-square.svg"
         />
         
-		<link href="../../_app/immutable/assets/0.ogwFCQNU.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.zgnjTYAI.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/-lbz2fgr.js">
+		<link href="../../_app/immutable/assets/0.BxnKCxa3.css" rel="stylesheet">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.CDxlny7n.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/BMqYHDKq.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BtrIT0cS.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CVtmfPP4.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BUblR-XZ.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BxNSKwhX.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/D0iwhpLH.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.T7Mi36xL.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.CwxOTbFh.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/D9Z9MdNV.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/iJyNzkEG.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Cb8T6Zhx.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/__whVJea.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/0.Ba2Ib6mt.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/0.CsexYnz9.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/00AeCcnI.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/D1yEx-Gl.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/C_imjAoU.js">
@@ -54,15 +54,15 @@
 			
 			<script>
 				{
-					__sveltekit_12x912y = {
+					__sveltekit_1jzhxys = {
 						base: new URL("../..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.zgnjTYAI.js"),
-						import("../../_app/immutable/entry/app.T7Mi36xL.js")
+						import("../../_app/immutable/entry/start.CDxlny7n.js"),
+						import("../../_app/immutable/entry/app.CwxOTbFh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
