--- a/talks/2024-04-11-chalmers-entrepreneurship/index.html
+++ b/talks/2024-04-11-chalmers-entrepreneurship/index.html
@@ -14,20 +14,20 @@
         />
         
 		<link href="../../_app/immutable/assets/0.BxnKCxa3.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.CDxlny7n.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/BMqYHDKq.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.RfR9vm78.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/DixYk0Zr.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BtrIT0cS.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CVtmfPP4.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BUblR-XZ.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BxNSKwhX.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/D0iwhpLH.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.CwxOTbFh.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.DqQCHq-d.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/D9Z9MdNV.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/iJyNzkEG.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Cb8T6Zhx.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/__whVJea.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/0.CsexYnz9.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/0.MrrkOwaB.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/00AeCcnI.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/D1yEx-Gl.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/C_imjAoU.js">
@@ -53,15 +53,15 @@
 			
 			<script>
 				{
-					__sveltekit_1jzhxys = {
+					__sveltekit_1xh8d4m = {
 						base: new URL("../..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.CDxlny7n.js"),
-						import("../../_app/immutable/entry/app.CwxOTbFh.js")
+						import("../../_app/immutable/entry/start.RfR9vm78.js"),
+						import("../../_app/immutable/entry/app.DqQCHq-d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
