--- a/qr.html
+++ b/qr.html
@@ -14,20 +14,20 @@
         />
         
 		<link href="./_app/immutable/assets/0.BxnKCxa3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.RfR9vm78.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DixYk0Zr.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CFXVKQCZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CsQJA2R5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BtrIT0cS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CVtmfPP4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BUblR-XZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BxNSKwhX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D0iwhpLH.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DqQCHq-d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BrI15Djq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D9Z9MdNV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/iJyNzkEG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Cb8T6Zhx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/__whVJea.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.MrrkOwaB.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B-Y1d2Bf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/00AeCcnI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D1yEx-Gl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C_imjAoU.js">
@@ -42,15 +42,15 @@
 			
 			<script>
 				{
-					__sveltekit_1xh8d4m = {
+					__sveltekit_1kyfrp5 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.RfR9vm78.js"),
-						import("./_app/immutable/entry/app.DqQCHq-d.js")
+						import("./_app/immutable/entry/start.CFXVKQCZ.js"),
+						import("./_app/immutable/entry/app.BrI15Djq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
