WIP: Add web feeds

--- a/src/app.html
+++ b/src/app.html
@@ -12,6 +12,18 @@
             sizes="180x180"
             href="/images/compass-icon-square.svg"
         />
+        <link
+            href="/feed.json"
+            type="application/feed+json"
+            rel="alternate"
+            title="Samuel Plumppu's blog feed (JSON)"
+        />
+        <link
+            href="/feed.atom"
+            type="application/atom+xml"
+            rel="alternate"
+            title="Samuel Plumppu's blog feed (Atom)"
+        />
         %sveltekit.head%
     </head>
 
