--- a/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
+++ b/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
@@ -14,12 +14,12 @@
         />
         
 		<link href="../../_app/immutable/assets/0.Bh3a4Fzg.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.BSD-SMim.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/DFiIIAE6.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.TrZGZw0N.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Dw-lBIEv.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DMaD_ksp.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/D0iwhpLH.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CKBNsIDW.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.Dtqc6bmh.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.D9CLdt_S.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/PPVm8Dsz.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BUgGjDrP.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CjG6Qovv.js">
@@ -28,7 +28,7 @@
 		<link rel="modulepreload" href="../../_app/immutable/chunks/o0pZQfOb.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Yzyd3LZT.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/bds7bvi7.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/0.gPwfWyKK.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/0.3wz0kfXt.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/C5QWPwQP.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DyW-d-JE.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Dv-HztYY.js">
@@ -59,15 +59,15 @@
 			
 			<script>
 				{
-					__sveltekit_seoqia = {
+					__sveltekit_8syhgy = {
 						base: new URL("../..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.BSD-SMim.js"),
-						import("../../_app/immutable/entry/app.Dtqc6bmh.js")
+						import("../../_app/immutable/entry/start.TrZGZw0N.js"),
+						import("../../_app/immutable/entry/app.D9CLdt_S.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
