--- a/static/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
+++ b/static/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@200;400;600&display=swap" type="text/css">
+  <link rel="stylesheet" href="./fonts/helvetica-neue/helvetica-neue.css" type="text/css">
   <script type="module" crossorigin src="/talks/2022-05-09-chalmers-entrepreneurship-inner-development/assets/index.030be689.js"></script>
   <link rel="stylesheet" href="/talks/2022-05-09-chalmers-entrepreneurship-inner-development/assets/index.be5879df.css">
 </head>
 <body>
   <div id="app"></div>
-  
-  
 </body>
 </html>
