--- a/static/talks/2022-12-15-idg-toolkit-launch/index.html
+++ b/static/talks/2022-12-15-idg-toolkit-launch/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Avenir+Next:wght@200;400;600&family=Nunito+Sans:wght@200;400;600&family=Fira+Code:wght@200;400;600&display=swap" type="text/css">
+  <link rel="stylesheet" href="./fonts/helvetica-neue/helvetica-neue.css" type="text/css">
   <script type="module" crossorigin src="/talks/2022-12-15-idg-toolkit-launch/assets/index.677a1c9b.js"></script>
   <link rel="stylesheet" href="/talks/2022-12-15-idg-toolkit-launch/assets/index.97dc4c66.css">
 </head>
