Add missing fonts to old talks

--- a/static/talks/2021-05-17-chalmers-sustainability-entrepreneurship/index.html
+++ b/static/talks/2021-05-17-chalmers-sustainability-entrepreneurship/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./fonts/helvetica-neue/helvetica-neue.css" type="text/css">
   <script type="module" crossorigin src="/talks/2021-05-17-chalmers-sustainability-entrepreneurship/assets/index.ef644bfc.js"></script>
   <link rel="modulepreload" href="/talks/2021-05-17-chalmers-sustainability-entrepreneurship/assets/vendor.8652a162.js">
   <link rel="stylesheet" href="/talks/2021-05-17-chalmers-sustainability-entrepreneurship/assets/vendor.86eee491.css">
