--- a/static/talks/2021-09-11-hackforfuture-co-creation/index.html
+++ b/static/talks/2021-09-11-hackforfuture-co-creation/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./fonts/helvetica-neue/helvetica-neue.css" type="text/css">
   <script type="module" crossorigin src="/talks/2021-09-11-hackforfuture-co-creation/assets/index.5eda9672.js"></script>
   <link rel="modulepreload" href="/talks/2021-09-11-hackforfuture-co-creation/assets/vendor.05888ba9.js">
   <link rel="stylesheet" href="/talks/2021-09-11-hackforfuture-co-creation/assets/vendor.05ec87bc.css">
