Prepare feed generation

--- a/src/app.html
+++ b/src/app.html
@@ -16,13 +16,13 @@
             href="/feed.json"
             type="application/feed+json"
             rel="alternate"
-            title="Samuel Plumppu's blog feed (JSON)"
+            title="Blog feed (JSON)"
         />
         <link
             href="/feed.atom"
             type="application/atom+xml"
             rel="alternate"
-            title="Samuel Plumppu's blog feed (Atom)"
+            title="Blog feed (Atom)"
         />
         %sveltekit.head%
     </head>
