--- a/qr.html
+++ b/qr.html
@@ -25,12 +25,12 @@
             title="Blog feed (Atom)"
         />
         
-		<link href="./_app/immutable/assets/0.BhwHtpRJ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Ck4a_Op1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CTKsgY2t.js">
+		<link href="./_app/immutable/assets/0.GHLy8F1k.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CD_ldvzA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BDeLWfAG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/coNuk9vO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B7Mc_Ci6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CUBJBKQi.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B4am1so8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/PPVm8Dsz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/qptW2HJI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DkFmvXu1.js">
@@ -38,7 +38,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/1BiE7J-L.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CmHniBBp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BawEld27.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BrB5H7I2.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.ONnjIHQ6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BqroQTRk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D5_GDKGn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CMaSI_hS.js">
@@ -50,19 +50,19 @@
     </head>
 
     <body class="bg-honeydew" data-sveltekit-preload-data="hover">
-        <div id="svelte" style="display: contents"><!--[--><!--[--><!----><!----> <header class="mx-auto flex max-w-6xl flex-1 flex-wrap justify-between gap-x-2 gap-y-4 p-4 svelte-12qhfyh"><a href="/" class="link"><!---->Samuel Plumppu<!----></a><!----> <nav class="xs:space-x-4 flex space-x-2"><a href="/subscribe" title="Subscribe (Atom / JSON)" class="link flex"><span class="size-5 self-center bg-[url(/images/feed.svg)] bg-cover bg-no-repeat"></span><!----></a><!----> <!--[--><a href="/blog" class="link"><!---->Blog<!----></a><a href="/about" class="link"><!---->About<!----></a><a href="/talks" class="link"><!---->Talks<!----></a><!--]--></nav></header> <div class="container mx-auto max-w-6xl p-4 pb-0"><!----><div class="flex flex-col items-center text-center"><h2 class="font-bold">Scan to connect with me</h2> <a href="/" class="link"><!---->https://samuelplumppu.se<!----></a><!----> <img src="/images/qr-sp.svg" class="size-64 pt-4" alt="QR code to easily share the website https://samuelplumppu.se on for example conferences and in presentations"/></div><!----><!----></div> <footer class="container mx-auto max-w-6xl px-4 pb-8 text-center"><hr class="border-ming mx-auto my-16 max-w-sm" id="contact"/> <h2 class="xs:text-2xl mb-6 text-xl leading-none font-black tracking-tight text-balance sm:text-3xl lg:text-4xl">Let's co-create a sustainable future!</h2> <a href="#" class="bg-mantis inline-flex transform-gpu justify-center justify-self-center rounded-md px-8 py-3 font-black text-black shadow-lg duration-150 hover:scale-105 hover:shadow-xl "><span class="whitespace-nowrap">Email me</span></a><!----> <p class="mt-8">© 2015 - 2025 Samuel Plumppu</p> <div class="my-8 flex flex-wrap items-center justify-center space-x-8"><a href="https://matrix.to/#/@Greenheart:matrix.org" target="_blank" rel="noopener noreferrer" aria-label="Message me securely with the Matrix protocol"><img src="/images/matrix-logo.svg" alt="Matrix.org logo" class="h-8"/></a> <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer" aria-label="See my libre software at GitHub"><img src="/images/github.svg" alt="GitHub" class="size-8"/></a> <a href="https://fosstodon.org/@Greenheart" target="_blank" rel="me noopener noreferrer" aria-label="Follow me on Mastodon"><img src="/images/mastodon-logo.svg" alt="Mastodon" class="size-8"/></a> <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn"><img src="/images/linkedin.svg" alt="LinkedIn" class="size-8"/></a></div> <p><span class="inline-flex flex-wrap justify-center gap-1"><span class="mr-1 size-5 self-center bg-[url(/images/feed.svg)] bg-cover bg-no-repeat"></span> <a href="/subscribe" class="link self-center compact"><!---->Subscribe<!----></a><!----> with your feed reader: <span class="inline-flex flex-nowrap gap-0.5"><a href="/feed.atom" class="link self-center compact"><!---->Atom<!----></a><!---->/<a href="/feed.json" class="link self-center compact"><!---->JSON<!----></a><!----></span></span></p><!----></footer><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+        <div id="svelte" style="display: contents"><!--[--><!--[--><!----><!----> <header class="xs:text-base 2xs:justify-between mx-auto flex max-w-6xl flex-1 flex-wrap justify-center gap-x-2 gap-y-4 p-4 text-sm svelte-12qhfyh"><a href="/" class="link"><!---->Samuel Plumppu<!----></a><!----> <nav class="xs:space-x-4 flex space-x-2"><a href="/subscribe" title="Subscribe (Atom / JSON)" class="link flex"><span class="size-4 self-center bg-[url(/images/feed.svg)] bg-cover bg-no-repeat"></span><!----></a><!----> <!--[--><a href="/blog" class="link"><!---->Blog<!----></a><a href="/about" class="link"><!---->About<!----></a><a href="/talks" class="link"><!---->Talks<!----></a><!--]--></nav></header> <div class="container mx-auto max-w-6xl p-4 pb-0"><!----><div class="flex flex-col items-center text-center"><h2 class="font-bold">Scan to connect with me</h2> <a href="/" class="link"><!---->https://samuelplumppu.se<!----></a><!----> <img src="/images/qr-sp.svg" class="size-64 pt-4" alt="QR code to easily share the website https://samuelplumppu.se on for example conferences and in presentations"/></div><!----><!----></div> <footer class="container mx-auto max-w-6xl px-4 pb-8 text-center"><hr class="border-ming mx-auto my-16 max-w-sm" id="contact"/> <h2 class="xs:text-2xl mb-6 text-xl leading-none font-black tracking-tight text-balance sm:text-3xl lg:text-4xl">Let's co-create a sustainable future!</h2> <a href="#" class="bg-mantis inline-flex transform-gpu justify-center justify-self-center rounded-md px-8 py-3 font-black text-black shadow-lg duration-150 hover:scale-105 hover:shadow-xl "><span class="whitespace-nowrap">Email me</span></a><!----> <p class="mt-8">© 2015 - 2025 Samuel Plumppu</p> <div class="my-8 flex flex-wrap items-center justify-center space-x-8"><a href="https://matrix.to/#/@Greenheart:matrix.org" target="_blank" rel="noopener noreferrer" aria-label="Message me securely with the Matrix protocol"><img src="/images/matrix-logo.svg" alt="Matrix.org logo" class="h-8"/></a> <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer" aria-label="See my libre software at GitHub"><img src="/images/github.svg" alt="GitHub" class="size-8"/></a> <a href="https://fosstodon.org/@Greenheart" target="_blank" rel="me noopener noreferrer" aria-label="Follow me on Mastodon"><img src="/images/mastodon-logo.svg" alt="Mastodon" class="size-8"/></a> <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn"><img src="/images/linkedin.svg" alt="LinkedIn" class="size-8"/></a></div> <p><span class="inline-flex flex-wrap justify-center gap-1"><span class="mr-1 size-5 self-center bg-[url(/images/feed.svg)] bg-cover bg-no-repeat"></span> <a href="/subscribe" class="link self-center compact"><!---->Subscribe<!----></a><!----> with your feed reader: <span class="inline-flex flex-nowrap gap-0.5"><a href="/feed.atom" class="link self-center compact"><!---->Atom<!----></a><!---->/<a href="/feed.json" class="link self-center compact"><!---->JSON<!----></a><!----></span></span></p><!----></footer><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_15xvz3 = {
+					__sveltekit_77en1u = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Ck4a_Op1.js"),
-						import("./_app/immutable/entry/app.CUBJBKQi.js")
+						import("./_app/immutable/entry/start.CD_ldvzA.js"),
+						import("./_app/immutable/entry/app.B4am1so8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
