--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             title="Blog feed (Atom)"
         />
         
-		<link href="./_app/immutable/assets/0.BhwHtpRJ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Ck4a_Op1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CTKsgY2t.js">
+		<link href="./_app/immutable/assets/0.GHLy8F1k.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CD_ldvzA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BDeLWfAG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/coNuk9vO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B7Mc_Ci6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CUBJBKQi.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B4am1so8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/PPVm8Dsz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/qptW2HJI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DkFmvXu1.js">
@@ -38,7 +38,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/1BiE7J-L.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CmHniBBp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BawEld27.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BrB5H7I2.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.ONnjIHQ6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BqroQTRk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D5_GDKGn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CMaSI_hS.js">
@@ -53,7 +53,7 @@
     </head>
 
     <body class="bg-honeydew" data-sveltekit-preload-data="hover">
-        <div id="svelte" style="display: contents"><!--[--><!--[--><!----><!----> <header class="mx-auto flex max-w-6xl flex-1 flex-wrap justify-between gap-x-2 gap-y-4 p-4 svelte-12qhfyh"><a href="/" class="link"><!---->Samuel Plumppu<!----></a><!----> <nav class="xs:space-x-4 flex space-x-2"><a href="/subscribe" title="Subscribe (Atom / JSON)" class="link flex"><span class="size-5 self-center bg-[url(/images/feed.svg)] bg-cover bg-no-repeat"></span><!----></a><!----> <!--[--><a href="/blog" class="link"><!---->Blog<!----></a><a href="/about" class="link"><!---->About<!----></a><a href="/talks" class="link"><!---->Talks<!----></a><!--]--></nav></header> <div class="container mx-auto max-w-6xl p-4 pb-0"><!----><picture><!--[--><source srcset="/images/samuel.webp" type="image/webp" width="160" height="160"/><!--]--> <img src="/images/samuel.jpg" width="160" height="160" alt="Samuel Plumppu" class="mx-auto my-8 h-32 w-32 rounded-full shadow-2xl sm:h-40 sm:w-40"/></picture><!----> <section class="grid justify-center text-center"><h1 class="xs:text-5xl mb-8 text-4xl leading-none font-black tracking-tight sm:text-6xl lg:text-7xl">Hey! I'm Samuel.</h1> <h2 class="mb-12 text-xl leading-6 font-black tracking-tight sm:text-3xl lg:text-4xl"><div class="bg-mantis -skew-y-1 transform p-2 shadow-2xl"><span class="whitespace-nowrap">Sustainability Entrepreneur</span> &amp; <span class="whitespace-nowrap">Fullstack Developer</span></div></h2></section> <section class="mx-auto grid max-w-prose grid-cols-1 gap-4 text-xl sm:text-2xl"><p>Since 2015, I've worked with early stage startups and non-profits to
+        <div id="svelte" style="display: contents"><!--[--><!--[--><!----><!----> <header class="xs:text-base 2xs:justify-between mx-auto flex max-w-6xl flex-1 flex-wrap justify-center gap-x-2 gap-y-4 p-4 text-sm svelte-12qhfyh"><a href="/" class="link"><!---->Samuel Plumppu<!----></a><!----> <nav class="xs:space-x-4 flex space-x-2"><a href="/subscribe" title="Subscribe (Atom / JSON)" class="link flex"><span class="size-4 self-center bg-[url(/images/feed.svg)] bg-cover bg-no-repeat"></span><!----></a><!----> <!--[--><a href="/blog" class="link"><!---->Blog<!----></a><a href="/about" class="link"><!---->About<!----></a><a href="/talks" class="link"><!---->Talks<!----></a><!--]--></nav></header> <div class="container mx-auto max-w-6xl p-4 pb-0"><!----><picture><!--[--><source srcset="/images/samuel.webp" type="image/webp" width="160" height="160"/><!--]--> <img src="/images/samuel.jpg" width="160" height="160" alt="Samuel Plumppu" class="mx-auto my-8 h-32 w-32 rounded-full shadow-2xl sm:h-40 sm:w-40"/></picture><!----> <section class="grid justify-center text-center"><h1 class="xs:text-5xl mb-8 text-4xl leading-none font-black tracking-tight sm:text-6xl lg:text-7xl">Hey! I'm Samuel.</h1> <h2 class="mb-12 text-xl leading-6 font-black tracking-tight sm:text-3xl lg:text-4xl"><div class="bg-mantis -skew-y-1 transform p-2 shadow-2xl"><span class="whitespace-nowrap">Sustainability Entrepreneur</span> &amp; <span class="whitespace-nowrap">Fullstack Developer</span></div></h2></section> <section class="mx-auto grid max-w-prose grid-cols-1 gap-4 text-xl sm:text-2xl"><p>Since 2015, I've worked with early stage startups and non-profits to
         create a future where both humanity and the living planet thrive
         together. I'm curious about how tech, systems thinking and <a href="https://doughnuteconomics.org/themes/business-enterprise" class="link compact"><!---->Doughnut design for business<!----></a><!----> can be combined to create a positive impact.</p> <p>With a strong passion for how libre software and co-operatives can help
         create an economy that is regenerative and distributive by design, I'm
@@ -64,15 +64,15 @@
 			
 			<script>
 				{
-					__sveltekit_15xvz3 = {
+					__sveltekit_77en1u = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Ck4a_Op1.js"),
-						import("./_app/immutable/entry/app.CUBJBKQi.js")
+						import("./_app/immutable/entry/start.CD_ldvzA.js"),
+						import("./_app/immutable/entry/app.B4am1so8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
