--- a/subscribe.html
+++ b/subscribe.html
@@ -25,12 +25,12 @@
             title="Blog feed (Atom)"
         />
         
-		<link href="./_app/immutable/assets/0.BhwHtpRJ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Ck4a_Op1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CTKsgY2t.js">
+		<link href="./_app/immutable/assets/0.GHLy8F1k.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CD_ldvzA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BDeLWfAG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/coNuk9vO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B7Mc_Ci6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CUBJBKQi.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B4am1so8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/PPVm8Dsz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/qptW2HJI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DkFmvXu1.js">
@@ -38,7 +38,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/1BiE7J-L.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CmHniBBp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BawEld27.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BrB5H7I2.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.ONnjIHQ6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BqroQTRk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D5_GDKGn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CMaSI_hS.js">
@@ -46,12 +46,12 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/CzIQmLT8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Ctur7ITO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BAeT0Tag.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.CG3tuwk5.js"><!--12qhfyh--><meta name="fediverse:creator" content="@Greenheart@fosstodon.org"/><!----><!--7x56jp--><!--[--><!--]--> <!--[--><meta name="robots" content="index,follow"/><!--]--> <!--[--><meta name="description" content="Experienced fullstack developer, curious about how tech, systems thinking and Doughnut design for business can be combined to create a positive impact."/><!--]--> <!--[--><link rel="canonical" href="http://sveltekit-prerender/subscribe"/><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[--><!--[--><meta property="og:url" content="http://sveltekit-prerender/subscribe"/><!--]--> <!--[--><meta property="og:type" content="website"/> <!--[!--><!--[!--><!--[!--><!--[!--><!--]--><!--]--><!--]--><!--]--><!--]--> <!--[--><meta property="og:title" content="Samuel Plumppu - Sustainability Entrepreneur &amp; Fullstack Developer"/><!--]--> <!--[--><meta property="og:description" content="Experienced fullstack developer, curious about how tech, systems thinking and Doughnut design for business can be combined to create a positive impact."/><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--><!----><title>Samuel Plumppu - Sustainability Entrepreneur &amp; Fullstack Developer · Samuel Plumppu - Sustainability Entrepreneur &amp; Fullstack Developer</title>
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.DzG6xrqu.js"><!--12qhfyh--><meta name="fediverse:creator" content="@Greenheart@fosstodon.org"/><!----><!--7x56jp--><!--[--><!--]--> <!--[--><meta name="robots" content="index,follow"/><!--]--> <!--[--><meta name="description" content="Experienced fullstack developer, curious about how tech, systems thinking and Doughnut design for business can be combined to create a positive impact."/><!--]--> <!--[--><link rel="canonical" href="http://sveltekit-prerender/subscribe"/><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[--><!--[--><meta property="og:url" content="http://sveltekit-prerender/subscribe"/><!--]--> <!--[--><meta property="og:type" content="website"/> <!--[!--><!--[!--><!--[!--><!--[!--><!--]--><!--]--><!--]--><!--]--><!--]--> <!--[--><meta property="og:title" content="Samuel Plumppu - Sustainability Entrepreneur &amp; Fullstack Developer"/><!--]--> <!--[--><meta property="og:description" content="Experienced fullstack developer, curious about how tech, systems thinking and Doughnut design for business can be combined to create a positive impact."/><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--><!----><title>Samuel Plumppu - Sustainability Entrepreneur &amp; Fullstack Developer · Samuel Plumppu - Sustainability Entrepreneur &amp; Fullstack Developer</title>
     </head>
 
     <body class="bg-honeydew" data-sveltekit-preload-data="hover">
-        <div id="svelte" style="display: contents"><!--[--><!--[--><!----><!----> <header class="mx-auto flex max-w-6xl flex-1 flex-wrap justify-between gap-x-2 gap-y-4 p-4 svelte-12qhfyh"><a href="/" class="link"><!---->Samuel Plumppu<!----></a><!----> <nav class="xs:space-x-4 flex space-x-2"><a href="/subscribe" title="Subscribe (Atom / JSON)" class="link flex"><span class="size-5 self-center bg-[url(/images/feed.svg)] bg-cover bg-no-repeat"></span><!----></a><!----> <!--[--><a href="/blog" class="link"><!---->Blog<!----></a><a href="/about" class="link"><!---->About<!----></a><a href="/talks" class="link"><!---->Talks<!----></a><!--]--></nav></header> <div class="container mx-auto max-w-6xl p-4 pb-0"><!----><section class="mb-8 grid justify-center"><h1 class="xs:text-5xl mb-8 text-4xl leading-none font-black tracking-tight sm:text-6xl lg:text-7xl">Subscribe to my blog</h1> <article class="prose text-black"><p>You can read my latest blog posts in your feed reader. Multiple
-            formats available:</p> <ul class="mb-8 flex gap-4"><li class="flex flex-wrap justify-center gap-1"><span class="size-5 self-center bg-[url(/images/feed.svg)] bg-cover bg-no-repeat"></span> <a href="/feed.atom" class="link self-center compact"><!---->Atom<!----></a><!----></li> <li class="flex flex-wrap justify-center gap-1"><span class="size-5 self-center bg-[url(/images/feed.svg)] bg-cover bg-no-repeat"></span> <a href="/feed.json" class="link self-center compact"><!---->JSON<!----></a><!----></li></ul> <h2>How does this work?</h2> <p>You can use a feed reader (sometimes called an RSS reader) to follow
+        <div id="svelte" style="display: contents"><!--[--><!--[--><!----><!----> <header class="xs:text-base 2xs:justify-between mx-auto flex max-w-6xl flex-1 flex-wrap justify-center gap-x-2 gap-y-4 p-4 text-sm svelte-12qhfyh"><a href="/" class="link"><!---->Samuel Plumppu<!----></a><!----> <nav class="xs:space-x-4 flex space-x-2"><a href="/subscribe" title="Subscribe (Atom / JSON)" class="link flex"><span class="size-4 self-center bg-[url(/images/feed.svg)] bg-cover bg-no-repeat"></span><!----></a><!----> <!--[--><a href="/blog" class="link"><!---->Blog<!----></a><a href="/about" class="link"><!---->About<!----></a><a href="/talks" class="link"><!---->Talks<!----></a><!--]--></nav></header> <div class="container mx-auto max-w-6xl p-4 pb-0"><!----><section class="mb-8 grid justify-center"><h1 class="xs:text-5xl mb-8 text-4xl leading-none font-black tracking-tight sm:text-6xl lg:text-7xl">Subscribe to my blog</h1> <article class="prose text-black"><p>You can read my latest blog posts in your feed reader. Multiple
+            formats available:</p> <ul class="xs:justify-start xs:pl-6 mb-8 flex justify-center gap-4 p-0 [&amp;>li]:p-0"><li class="flex flex-wrap justify-center gap-1"><span class="-mb-0.5 size-5 self-center bg-[url(/images/feed.svg)] bg-cover bg-no-repeat"></span> <a href="/feed.atom" class="link h-5 self-center compact"><!---->Atom<!----></a><!----></li> <li class="flex flex-wrap justify-center gap-1"><span class="-mb-0.5 size-5 self-center bg-[url(/images/feed.svg)] bg-cover bg-no-repeat"></span> <a href="/feed.json" class="link h-5 self-center compact"><!---->JSON<!----></a><!----></li></ul> <h2>How does this work?</h2> <p>You can use a feed reader (sometimes called an RSS reader) to follow
             multiple blogs or websites via their <a href="https://en.wikipedia.org/wiki/Web_feed" class="link compact"><!---->web feeds<!----></a><!---->. This is a convenient and privacy-friendly way to stay up to date
             without subscribing to email newsletters or using relying on social
             media algorithms.</p> <h2>Get started</h2> <ol><li><a href="https://netnewswire.com/help/what-is-rss.html" class="link"><!---->Read this short intro to how feeds work<!----></a><!---->.</li> <li>Install and get started with a feed reader for your device. I
@@ -63,15 +63,15 @@
 			
 			<script>
 				{
-					__sveltekit_15xvz3 = {
+					__sveltekit_77en1u = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Ck4a_Op1.js"),
-						import("./_app/immutable/entry/app.CUBJBKQi.js")
+						import("./_app/immutable/entry/start.CD_ldvzA.js"),
+						import("./_app/immutable/entry/app.B4am1so8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
