--- a/talks.html
+++ b/talks.html
@@ -26,11 +26,11 @@
         />
         
 		<link href="./_app/immutable/assets/0.GHLy8F1k.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CD_ldvzA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BDeLWfAG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C-Yjp9s9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BMt_E8lW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/coNuk9vO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B7Mc_Ci6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B4am1so8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.W7eDwfcG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/PPVm8Dsz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/qptW2HJI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DkFmvXu1.js">
@@ -38,7 +38,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/1BiE7J-L.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CmHniBBp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BawEld27.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.ONnjIHQ6.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.JRrDrks3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BqroQTRk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D5_GDKGn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CMaSI_hS.js">
@@ -54,15 +54,15 @@
 			
 			<script>
 				{
-					__sveltekit_77en1u = {
+					__sveltekit_11s9394 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CD_ldvzA.js"),
-						import("./_app/immutable/entry/app.B4am1so8.js")
+						import("./_app/immutable/entry/start.C-Yjp9s9.js"),
+						import("./_app/immutable/entry/app.W7eDwfcG.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
