--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,16 @@
         <link rel="icon" href="/images/favicon-32x32.png" type="image/png" />
         <link rel="icon" href="/favicon.ico" />
         <meta name="theme-color" content="#5ac75f" />
+        <meta name="color-scheme" content="dark light" />
+        <script>
+            document.documentElement.classList.toggle(
+                'dark',
+                localStorage.theme === 'dark' ||
+                    (!('theme' in localStorage) &&
+                        window.matchMedia('(prefers-color-scheme: dark)')
+                            .matches),
+            )
+        </script>
         <link
             rel="apple-touch-icon"
             sizes="180x180"
@@ -27,7 +37,10 @@
         %sveltekit.head%
     </head>
 
-    <body class="bg-honeydew" data-sveltekit-preload-data="hover">
+    <body
+        class="bg-honeydew dark:bg-evergreen"
+        data-sveltekit-preload-data="hover"
+    >
         <div id="svelte" style="display: contents">%sveltekit.body%</div>
     </body>
 </html>
