--- a/subscribe.html
+++ b/subscribe.html
@@ -35,19 +35,19 @@
             title="Blog feed (Atom)"
         />
         
-		<link href="./_app/immutable/assets/0.DDzbNh1A.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BB3qb4TY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DX6CF0CU.js">
+		<link href="./_app/immutable/assets/0.488w5Sjj.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.VKf-84Bf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cua82Kfv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CJ5kycIc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CzssVKiR.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.PTpALIBQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Dtaxfko_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/X3pk7U9o.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bdha1fzv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BGW--rBo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/U57kl7hy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BIxsqi5k.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/f7323myC.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Dae1bmuq.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BdUv-eYE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CLaDNB_m.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BC9GrCcg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/I_XotMi0.js">
@@ -76,15 +76,15 @@
 			
 			<script>
 				{
-					__sveltekit_kxwaik = {
+					__sveltekit_cp428i = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BB3qb4TY.js"),
-						import("./_app/immutable/entry/app.PTpALIBQ.js")
+						import("./_app/immutable/entry/start.VKf-84Bf.js"),
+						import("./_app/immutable/entry/app.Dtaxfko_.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
