--- a/about.html
+++ b/about.html
@@ -35,19 +35,19 @@
             title="Blog feed (Atom)"
         />
         
-		<link href="./_app/immutable/assets/0.C3WNfWVC.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.HC0HjJFi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BGmgx0Lh.js">
+		<link href="./_app/immutable/assets/0.B9bZB-hS.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.eCdsj1r4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CrukaeKp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DmthGHIe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DJze5qmA.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CEKS7GuO.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.67YIZLv4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BczPc4Zd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/tV8Fnljd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Co4GkNEq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/5qfvcbkh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CL3oEfVs.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BsOUpAhI.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BveLPAUf.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.j2sANLlP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/pJ4098Nb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/2zvAppLV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CXUuUdFk.js">
@@ -82,15 +82,15 @@
 			
 			<script>
 				{
-					__sveltekit_1up52ig = {
+					__sveltekit_16cdw4y = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.HC0HjJFi.js"),
-						import("./_app/immutable/entry/app.CEKS7GuO.js")
+						import("./_app/immutable/entry/start.eCdsj1r4.js"),
+						import("./_app/immutable/entry/app.67YIZLv4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
