--- a/talks.html
+++ b/talks.html
@@ -36,12 +36,12 @@
         />
         
 		<link href="./_app/immutable/assets/0.GlYlMjJf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DBfZXmYO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Ck4uupFK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ByFM-NPI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Bi7ERf7Z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GZG48BUc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Djzs_vta.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BcMWtO7v.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D3D1QdI8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DDRSfoAz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/imt8fmZx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B-oRaJiq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BlxXD2Cz.js">
@@ -49,11 +49,11 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bp23vAW-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B3ETRlH4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CR4KfHPE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.oboSTaYy.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Lbh_PqlV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/kWG-pE-1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/lpmQg3aL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DLT3QoAq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D4bn7aD-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/2zj_Puj0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BfGE2GYo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D7Pvki5j.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D8-v3CQz.js">
@@ -68,15 +68,15 @@
 			
 			<script>
 				{
-					__sveltekit_1tb8gvp = {
+					__sveltekit_10p894v = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DBfZXmYO.js"),
-						import("./_app/immutable/entry/app.D3D1QdI8.js")
+						import("./_app/immutable/entry/start.ByFM-NPI.js"),
+						import("./_app/immutable/entry/app.DDRSfoAz.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
